--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <span>|</span>
         <a href="#contact-section" id="contact">Contact</a>
     </nav>
-
+    
+        <p id="date" class="date"></p>
+    
     <div class="container">
         <section id="list-section">
             <h2 class="heading">All awesome books</h2>
